Fixing spacings

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -5,10 +5,10 @@
   --grey-700: hsl(0, 0%, 20%);
   --grey-800: hsl(0, 0%, 12%);
   --grey-900: hsl(0, 0%, 8%);
-  --spacing-300: 30px;
-  --spacing-200: 18px;
-  --spacing-150: 14px;
-  --spacing-100: 10px;
+  --spacing-300: 32px;
+  --spacing-200: 20px;
+  --spacing-150: 16px;
+  --spacing-100: 12px;
   --line-height: 150%;
 }
 
@@ -36,7 +36,7 @@
   flex-direction: column;
   align-items: center;
   width: 320px;
-  padding: var(--spacing-300);
+  padding: var(--spacing-200);
   border-radius: 12px;
   background-color: var(--grey-800);
 }
@@ -69,13 +69,11 @@
 .profile-info h2 {
   font-size: 24px;
   font-weight: 600;
-  letter-spacing: 1px;
   margin-bottom: var(--spacing-100);
 }
 .profile-info p {
   font-size: 14px;
   font-weight: 700;
-  letter-spacing: 0.7px;
   color: var(--green);
 }
 
